# parkering_data

./: .env.example  .gitignore  main.py  pyproject.toml  runtime_logger.py
database/: models.py  operations.py  utils.py
webscraper/: easypark.py  giantleap.py  parkone.py  parkpark.py  scanview.py  solvision.py  utils.py
